--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Toboolist</title>
+
+        <!-- style connection -->
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         
+        <!-- header of the page -->
+        <header>
+
+            <div id="logo">
+                <img src="img/Logo.png" alt="logo">
+            </div>
+            <div id="title">
+                Toboolist
+            </div>
+
+        </header>
+
+        <!-- main content of the page -->
+        <main>
+
+            
+
+        </main>
+
     </body>
 </html>
