feat: add list container index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
         <!-- main content of the page -->
         <main>
 
-            
+            <div class="container first-part">
+                <div class="button">Add Task</div>
+                <div class="button">Add Section</div>
+            </div>
+
+            <div class="container second-part">
+                <div class="button">Add Task</div>
+                <div class="button">Add Section</div>
+            </div>
 
         </main>
 
