feat: first part container button index

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <main>
 
             <div class="container first-part">
-                <div class="button">Add Task</div>
-                <div class="button">Add Section</div>
+                <div class="button task-btn">Add Task</div>
+                <div class="button section-btn">Add Section</div>
             </div>
 
             <div class="container second-part">
-                <div class="button">Add Task</div>
+                <div class="button ">Add Task</div>
                 <div class="button">Add Section</div>
             </div>
 
