feat: add section list index

--- a/index.html
+++ b/index.html
@@ -26,14 +26,33 @@
         <!-- main content of the page -->
         <main>
 
+            <!-- first part of list container -->
             <div class="container first-part">
                 <div class="button task-btn">Add Task</div>
                 <div class="button section-btn">Add Section</div>
             </div>
 
+            <!-- second part of list container -->
             <div class="container second-part">
-                <div class="button ">Add Task</div>
-                <div class="button">Add Section</div>
+
+                <div class="section-list">
+
+                    <!-- name section -->
+                    <div class="name-section">
+                        &#x1F783; New Task
+                    </div>
+
+                    <!-- task -->
+                    <div class="task">
+                        
+                        <div class="symbol-mark syb-check"><span>&#10004;</span></div>
+                        <div class="task-name">Quarterly Newsletter</div>
+                        <div class="label-list">Editorial</div>
+
+                    </div>
+
+                </div>
+
             </div>
 
         </main>
