feat: finalize index file

--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
 
         </header>
 
+
+        <!-- sample CHECK task -->
+        <!-- <div class="task">
+                        
+            <div class="symbol-mark syb-check"><span>&#10004;</span></div>
+            <div class="task-name">Lorem ipsum dolor</div>
+            <div class="label-list label-type">Lorem ipsum dolor</div>
+
+        </div> -->
+
+        <!-- sample DENY task -->
+        <!-- <div class="task">
+                        
+            <div class="symbol-mark syb-deny"><span>&#128936;</span></div>
+            <div class="task-name">Lorem ipsum dolor</div>
+            <div class="label-list label-type">Lorem ipsum dolor</div>
+
+        </div> -->
+
+
         <!-- main content of the page -->
         <main>
 
